--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ qp('track', 'ViewContent');
 </script>
 <noscript><img height="1" width="1" style="display:none" src="https://q.quora.com/_/ad/b89c75d760f249f98e7cc20e2c598b15/pixel?tag=ViewContent&noscript=1"/></noscript>
 <!-- End of Quora Pixel Code -->
-
+<script>qp('track', 'Purchase');</script>
 
 	    
     </script>
